# marketing-platform

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONSTITUTION.md  Dockerfile  SPECIFICATION.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
frontend/: .env.example  middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  providers.tsx
frontend/hooks/: useChat.ts  useConfigFolders.ts  useCurrentUser.ts  useDiscoverFolders.ts  useIngestionPoll.ts  useSync.ts  useSyncRuns.ts
frontend/lib/: api.ts  dal.ts  session.ts  types.ts
migrations/: alembic.ini  env.py
migrations/versions/: 001_create_iam_tables.py  002_create_tenants_table.py  003_create_github_tables.py  004_create_ingestion_tables.py  005_create_rag_tables.py  006a_add_sync_tables.py  006b_add_sync_runs.py  006c_extend_kb_documents.py  006d_extend_ingestion_documents.py  006e_extend_github_connections.py  007_fix_audit_log_target_fk.py  008_add_content_generation_tables.py
specs/004-nextjs-frontend/: data-model.md  plan.md  quickstart.md
specs/005-nextjs-frontend/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/005-rag-chat/: data-model.md  plan.md  research.md  spec.md  tasks.md
src/: config.py  main.py  tenant.py
tests/: conftest.py
utils/: audit.py  auth.py  chunker.py  crypto.py  db.py  email.py  embeddings.py  extractors.py  gcs.py  generator.py  github_api.py  github_client.py  indexer.py  ingestion_pipeline.py  pdf_renderer.py  postgres_manager.py  queue.py  rag.py  sync.py
(+174 files in other folders)
